# Vect-IP

./: .gitignore  asn_prefixes_v6.json  generate-icons.sh  go.mod  install.sh  ipv4cidr.txt  ipv6cidr.txt  readme.md
.github/workflows/: build-apk.yml  build-ipa.yml  release.yml  test.yml
.monkeycode/: MEMORY.md
android/: build-libvect.sh  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.c
android/gradle/: libs.versions.toml
android/libvect/: main.go
android/libvect/web/: index.html  manifest.json
cmd/mcis/: main.go
cmd/vect-web/: asn_prefixes_v4.json  main.go
cmd/vect-web/web/: index.html
internal/bandit/: bandit_test.go  thompson.go  tree.go
internal/cidr/: cidr.go  cidr_test.go
internal/dns/: cloudflare.go  provider.go  vercel.go
internal/engine/: config.go  config_test.go  engine.go  result.go  result_test.go
internal/output/: output.go
internal/probe/: download.go  multistream.go  probe_test.go  trace.go
internal/server/: cfnb.go  handlers.go  handlers_traceroute_unix.go  handlers_traceroute_windows.go
ios/: README.md  build-libvect.sh  exportOptions.plist  generate-icons.sh
ios/VectApp/: AppSettings.swift  ContentView.swift  Info.plist  SettingsView.swift  TracerouteService.swift  VectApp-Bridging-Header.h  VectApp.swift  WebView.swift
ios/VectApp.xcodeproj/: project.pbxproj
ios/VectApp/Assets.xcassets/: Contents.json
ios/libvect/: server.go
ios/libvect/web/: index.html
web/: index.html
windows/: main.go
(+9 files in other folders)
